# protoc-gen-pydantic

./: LICENSE  README.md  buf.gen.yaml  buf.yaml  go.mod  main.go
test/: pyproject.toml
test/api/v1/: test.proto
